@@ -799,10 +799,6 @@ sub run_test {
     close($fh);
   }
 
-  # Configure cdt6 to work as if it's on linux, even if running on Win32
-  $ENV{MPC_CDT_PLATFORMS} = 'linux';
-  $ENV{MPC_CDT_HOST_WIN32} = 0;
-
   my $CMD = -e 'MPC_ONLY' ? $MPC : $MWC;
   my $ret = system("$^X $popt " .
                    ($coverage ? "-MDevel::Cover=-db,$orig/cover_db " : '') .
@@ -885,6 +881,11 @@ sub determine_setup {
     $MWC = "$ENV{MPC_ROOT}/mwc.pl";
     $MPC = "$ENV{MPC_ROOT}/mpc.pl";
   }
+
+  # Configure cdt6 to work as if it's on linux, even if running on Win32
+  $ENV{MPC_CDT_PLATFORMS} = 'linux';
+  $ENV{MPC_CDT_HOST_WIN32} = 0;
+
   if (defined $MWC) {
     my $fh = new FileHandle();
     if (open($fh, "$^X " .
